@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclObj.c,v 1.46.2.34 2007/04/10 16:27:35 dgp Exp $
+ * RCS: @(#) $Id: tclObj.c,v 1.46.2.35 2007/04/11 05:07:55 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -443,10 +443,11 @@ Tcl_RegisterObjType(
 				 * be statically allocated (must live
 				 * forever). */
 {
-    int new;
+    int isNew;
+
     Tcl_MutexLock(&tableMutex);
     Tcl_SetHashValue(
-	    Tcl_CreateHashEntry(&typeTable, typePtr->name, &new), typePtr);
+	    Tcl_CreateHashEntry(&typeTable, typePtr->name, &isNew), typePtr);
     Tcl_MutexUnlock(&tableMutex);
 }
 
@@ -621,7 +622,7 @@ TclDbInitNewObj(
     if (!TclInExit()) {
 	Tcl_HashEntry *hPtr;
 	Tcl_HashTable *tablePtr;
-	int new;
+	int isNew;
 	ThreadSpecificData *tsdPtr = TCL_TSD_INIT(&dataKey);
 
 	if (tsdPtr->objThreadMap == NULL) {
@@ -630,8 +631,8 @@ TclDbInitNewObj(
 	    Tcl_InitHashTable(tsdPtr->objThreadMap, TCL_ONE_WORD_KEYS);
 	}
 	tablePtr = tsdPtr->objThreadMap;
-	hPtr = Tcl_CreateHashEntry(tablePtr, (char *) objPtr, &new);
-	if (!new) {
+	hPtr = Tcl_CreateHashEntry(tablePtr, (char *) objPtr, &isNew);
+	if (!isNew) {
 	    Tcl_Panic("expected to create new entry for object map");
 	}
 	Tcl_SetHashValue(hPtr, NULL);
@@ -966,7 +967,8 @@ TclFreeObj(
  */
 
 int
-TclObjBeingDeleted(Tcl_Obj *objPtr)
+TclObjBeingDeleted(
+    Tcl_Obj *objPtr)
 {
     return (objPtr->length == -1);
 }
